--- a/index.html
+++ b/index.html
@@ -1,14 +1,354 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5FG57VX');</script>
+    <!-- End Google Tag Manager -->
+
+    <!--Start of Zendesk Chat Script-->
+    <!-- <script type="text/javascript">
+    window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+    d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+    _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute("charset","utf-8");
+    $.src="https://v2.zopim.com/?4cdlDLXEEsd1GSx1lSqunxWajbtP05qr";z.t=+new Date;$.
+    type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
+    </script> -->
+    <!--End of Zendesk Chat Script-->
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>BeMadic - votre coiffeuse chez vous en un clic !</title>
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Web Starter Kit">
+    <link rel="icon" sizes="192x192" href="./dist/images/touch/chrome-touch-icon-192x192.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+    <link rel="apple-touch-icon" href="./dist/images/touch/apple-touch-icon.png">
+    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+    <meta name="msapplication-TileColor" content="#7b0213">
+    <meta name="theme-color" content="#7b0213">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/slick.css">
+    <link rel="stylesheet" href="dist/css/slick-theme.css">
 </head>
-<body>
-<div class="col">
-    ezefzefzefef
+
+<body data-controller="module" class="loading">
+
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5FG57VX"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+<div class="container">
+    <div class="section-1" id="rev-1">
+        <div class="section-1-bg appear"></div>
+        <div class="section-1-overlay"></div>
+        <div class="section-1-content appear">
+            <div class="header-nav">
+                <div class="header-nav-left"><img src="./dist/images/logo-white.png" alt="BeMadIc Logo"></div>
+                <div class="header-nav-right">
+                    <nav>
+                        <ul>
+                            <li><a class="link-header scroll" href="#concept">concept</a></li>
+                            <li><a class="link-header scroll" href="#nos-coiffeuses">coiffeuses</a></li>
+                            <li><a class="get-app scroll" href="#app">App bientôt disponible</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="center-content">
+                <h1>Votre coiffeuse BeMadic chez vous en un clic !</h1><a class="get-app-btn" href="#newsletter">Restez au courant !</a>
+                <br />
+                <a href="#newsletter" class="link-partner scroll">Devenir coiffeuse partenaire</a>
+            </div>
+            <a href="#title-first">
+                <div class="scroll-indicator">
+                    <div class="scroll-text"><span>Scroll</span>
+                    </div>
+                    <div class="scroll-line"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="section-2 row">
+        <div class="section-2-content">
+            <h2 id="title-first">Coiffez-vous sereinement avec <span class="main-color">BeMadic.</span></h2>
+            <div class="description-section-2">
+                <p>BeMadic est une plate-forme consacrée à la réalisation et à la valorisation de la coiffure féminine Afro-Caribéenne. C'est l'application pour toutes vos coupes Afros. <br> <b>La qualité d'un salon et le confort de la maison !</b></p>
+                <p>Simplicité, proximité et accessibilité à toute. Grâce à l’application BeMadic, géolocalisez-vous et retrouvez instantanément près de chez vous des coiffeuses disponibles pour votre style quotidien.</p>
+                <a href="#concept" class="concept-btn">Le concept</a>
+            </div>
+        </div>
+        <div class="img-section-2"><img src="./dist/images/path.png" /></div>
+    </div>
+
+    <div class="be-block" id="nos-coiffeuses">
+        <h2 class="be-block_title">Nos <span class="be-block_title_sub">coiffeuses</span></h2>
+        <div class="be-block_caroussel">
+
+            <!--ITEM1-->
+            <div class="be-block_caroussel_item">
+                <div class="be-block_caroussel_image">
+                    <img src="./dist/images/slide/image-slide.jpg" alt="image du silde" class="be-block_caroussel_image_img">
+                </div>
+
+                <div class="be-block_caroussel_content">
+                    <div class="be-block_caroussel_content_header">
+                        <span></span>
+                    </div>
+
+                    <div class="be-block_caroussel_content_details">
+                        <h2 class="be-block_caroussel_content_title">Souaro</h2>
+                        <h3 class="be-block_caroussel_content_subtitle">Coiffeuse - Maquilleuse</h3>
+                        <hr class="be-block_caroussel_content_hr">
+                        <p class="be-block_caroussel_content_text">Fini les trois heures de temps dans un salon de coiffure après une longue et dure journée.</p>
+                    </div>
+
+                    <div class="be-block_caroussel_content_footer">
+                        <a href="#newsletter" class="be-block_caroussel_content_footer_link scroll">Devenir coiffeuse partenaire</a>
+                    </div>
+                </div>
+
+                <div class="be-block_caroussel_image">
+                    <img src="./dist/images/slide/image-slide.jpg" class="be-block_caroussel_image_img" alt="image du silde">
+                </div>
+            </div>
+
+            <!--Item2-->
+            <div class="be-block_caroussel_item">
+                <div class="be-block_caroussel_image">
+                    <img src="./dist/images/slide/image-slide.jpg" alt="image du silde" class="be-block_caroussel_image_img">
+                </div>
+
+                <div class="be-block_caroussel_content">
+                    <div class="be-block_caroussel_content_header">
+                        <span></span>
+                    </div>
+
+                    <div class="be-block_caroussel_content_details">
+                        <h2 class="be-block_caroussel_content_title">Souaro</h2>
+                        <h3 class="be-block_caroussel_content_subtitle">Coiffeuse - Maquilleuse</h3>
+                        <hr class="be-block_caroussel_content_hr">
+                        <p class="be-block_caroussel_content_text">Fini les trois heures de temps dans un salon de coiffure après une longue et dure journée.</p>
+                    </div>
+
+                    <div class="be-block_caroussel_content_footer">
+                        <a href="#newsletter" class="be-block_caroussel_content_footer_link scroll">Devenir coiffeuse partenaire</a>
+                    </div>
+                </div>
+
+                <div class="be-block_caroussel_image">
+                    <img src="./dist/images/slide/image-slide.jpg" class="be-block_caroussel_image_img" alt="image du silde">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="section-4" id="concept">
+        <div class="bg-effect"></div>
+        <div class="bg-effect-title">HAIR</div>
+        <div class="under-section under-section-1 row">
+            <div class="under-text under-text-1">
+                <h3>L'application</h3>
+                <h4>Le moyen simple<br>de se coiffer</h4>
+                <p>Fini les trois heures de temps dans un salon de coiffure après une longue et dure journée.
+                    Fini les pertes de temps à devoir acheter à l'avance (les mèches, tissages, extensions, shampoing, etc.).
+                    L'application BeMadic vous permet de <b>réserver votre coiffeuse</b>, mais aussi de pouvoir <b>acheter tous les produits de beauté</b> qu'il vous faut. </p>
+                <p>Appuyez simplement sur un bouton et commandez <b>votre coiffeuse et vos produits</b>. Elle se déplace chez vous et sait exactement quelle coiffure vous faire. Vous n'avez plus qu'à vous laisser chouchouter. Le paiement est <b>simple et rapide</b>.</p>
+            </div>
+
+            <div class="under-img under-img-1">
+                <div class="img-set">
+                    <img src="./dist/images/about.png" />
+                    <div class="overlay-set"></div>
+                </div>
+                <div class="icon-img"><i class="fa fa-mobile" aria-hidden="true"></i></div>
+            </div>
+        </div>
+
+        <div class="under-section under-section-2 row">
+            <div class="under-img under-img-2">
+                <div class="img-set">
+                    <img src="./dist/images/about.png">
+                    <div class="overlay-set"></div>
+                </div>
+                <div class="icon-img"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+            </div>
+
+            <div class="under-text under-text-2">
+                <h3>La mobilité</h3>
+                <h4>Chez vous, à<br>tout instant</h4>
+                <p>Votre style quotidien, une coiffure pour un événement (Baptême, mariage, anniversaire, etc.) Quelle que soit l'occasion, vous pouvez toujours compter sur BeMadic pour vous rendre belle, sans réservation requise.</p>
+            </div>
+        </div>
+
+        <div class="under-section under-section-3 row">
+            <div class="under-text under-text-3">
+                <h3>L'accessibilitée</h3>
+                <h4>Accessible à<br>toutes</h4>
+                <p>Des coiffures abordables et à des prix raisonnables. Pour une occasion spéciale ? Ou simplement quand vous avez besoin de vous sentir encore plus belle et vivante ? Commandez une coiffure BeMadic.</p>
+            </div>
+
+            <div class="under-img under-img-3">
+                <div class="img-set">
+                    <img src="./dist/images/about.png"/>
+                    <div class="overlay-set"></div>
+                </div>
+                <div class="icon-img"><i class="fa fa-eur" aria-hidden="true"></i></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="app" id="app">
+        <div class="app-overlay"></div>
+        <div class="app-content row">
+            <div class="title-girl-app">
+                <div class="content-text-app">
+                    <h3>Coiffez-vous<br>
+                        <span class="left-margin">plus rapidement</span>
+                    </h3>
+                    <div class="content-girl-app">
+                        <p>Vous avez mare de passer trois heures dans les salons ? Vous peinez à trouver une coiffeuse talentueuse près de chez vous ? Vous souhaitez découvrir les facettes de la beauté africaine et caribéenne ? <br>Alors l'application BeMadic est faite pour vous.</p>
+                        <p>Télécharger l'application et trouvez la coiffeuse qui vous faut. Elle se déplace chez vous, pour vous offrir une expérience BeMadic unique. Conseils et astuces beautés sont au rendez-vous. Vous avez la possibilité de laisser des avis.</p>
+                        <span class="hide-sm"><a href="#"><img src="./dist/images/play-store.png" alt="Obtenir l'application sur Android">
+                        </a><a href="#"><img src="./dist/images/apple-store.png" alt="Obtenir l'application sur Ios"></a></span>
+                    </div>
+                </div>
+                <div class="girl-get-app"><img src="./dist/images/header-bg4.png"/></div>
+            </div>
+            <div class="iphone-demo"><img src="./dist/images/iphone-skeleton1.png" alt="Demo iphone de l'application BEMADIC"/></div>
+        </div>
+    </div>
+
+    <div class="be-newsletter newsletter" id="newsletter">
+        <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+        <!--<style type="text/css">-->
+            <!--#mc_embed_signup{background:#000; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}-->
+            <!--/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.-->
+               <!--We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */-->
+        <!--</style>-->
+        <div id="mc_embed_signup">
+            <p class="be-newsletter_title">N'attendez plus, Inscrivez-vous à la newsletter !</p>
+
+            <form action="//bemadic.us15.list-manage.com/subscribe/post?u=9fc9aef09236288df090c7a23&amp;id=81793b6c32" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll newsletter_block">
+
+                    <input type="email" value="" name="EMAIL" class="email newsletter_email" id="mce-EMAIL" placeholder="email address" required>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_9fc9aef09236288df090c7a23_81793b6c32" tabindex="-1" value="">
+                    </div>
+                    <div class="clear">
+                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button newsletter_button"></div>
+                </div>
+            </form>
+        </div>
+
+        <!--End mc_embed_signup-->
+    </div>
+
+    <div class="footer">
+
+        <div class="logo-footer_logo">
+            <a href="#"><img src="./dist/images/logo-black.png"></a>
+        </div>
+
+        <div class="footer-nav row">
+            <div class="link-footer link-nav">
+                <nav>
+                    <ul>
+                        <li><a href="#">Presse</a></li>
+                        <li><a href="#">Faq</a></li>
+                        <li><a href="http://www.blog.bemadic.com">Blog</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+
+            <div class="link-footer link-social">
+                <nav>
+                    <ul>
+                        <li><a class="facebook" href="https://www.facebook.com/bemadic/" target="_blank">
+                            <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a class="twitter" href="https://twitter.com/bemadic" target="_blank">
+                            <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a class="instagram" href="https://www.instagram.com/bemadic_afro/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a class="twitter" href="https://www.linkedin.com/company-beta/11008444/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <!-- <li><a class="youtube" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li> -->
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="footer-copyright-content row">
+                <div class="copyright">© BeMadIc 2017 - <a href="#">Mentions légales</a></div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+<script src="./dist/javascripts/main.min.js"></script>
+<script src="./dist/javascripts/slick.min.js"></script>
+<script src="./dist/javascripts/reveal.js"></script>
+<script src="./dist/javascripts/anime.js"></script>
+<script>
+    (function() {
+        // Fake loading.
+        setTimeout(init, 0);
+        function init() {
+            document.body.classList.remove('loading');
+            var rev1 = new RevealFx(document.querySelector('#rev-1'), {
+                revealSettings : {
+                    bgcolor: '#7B0213',
+                    delay: 200,
+                    onCover: function(contentEl, revealerEl) {
+                        contentEl.style.opacity = 1;
+                    }
+                }
+            });
+            rev1.reveal();
+        }
+
+        $('a[href^="#"]').click(function(){
+            var the_id = $(this).attr("href");
+
+            $('html, body').animate({
+                scrollTop:$(the_id).offset().top
+            }, 'slow');
+            return false;
+        });
+
+    })();
+</script>
+
+<script>
+    $(document).ready(function(){
+        $('.be-block_caroussel').slick({
+            prevArrow:"<div class='be-block_caroussel_button be-block_caroussel_prev'><i class='fa fa-2x fa-arrow-left' aria-hidden='true'></i></div>",
+            nextArrow:"<div class='be-block_caroussel_button be-block_caroussel_next'><i class='fa fa-2x fa-arrow-right' aria-hidden='true'></i></div>"
+        })
+    });
+</script>
+
 <script src="dist/javascripts/scripts.js"></script>
+
+<!-- TIDIO CHAT -->
+<script src="//code.tidio.co/6hem71qjdouimaq82t6fhge064ixelwu.js"></script>
 </body>
 </html>
